rm bootstrapped ipfs node files

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,16 +1,34 @@
 version: '3.5'
 services:
-  # db:
-  #   image: postgres:14-alpine
-  #   shm_size: '2gb'
-  #   command: postgres -c work_mem=30MB
-  #   environment:
-  #     POSTGRES_USER: "${DB_USERNAME:-animus}"
-  #     POSTGRES_PASSWORD: "${DB_PASSWORD:-animus}"
-  #     POSTGRES_HOST_AUTH_METHOD: trust
-  #     PGDATA: /var/lib/postgresql-static/data
-  #   ports:
-  #     - "${DB_PORT:-5432}:5432"
+  db:
+    image: postgres:14-alpine
+    shm_size: '2gb'
+    command: postgres -c work_mem=30MB
+    environment:
+      - POSTGRES_USER=animus
+      - POSTGRES_PASSWORD=animus
+      - POSTGRES_DB=animus
+      - POSTGRES_HOST_AUTH_METHOD=trust
+      - PGDATA=/var/lib/postgresql-static/data
+    ports:
+      - 5432:5432
+    volumes: 
+      - ./db:/var/lib/postgresql/data
+
+  wait-for-db:
+    image: dadarek/wait-for-dependencies
+    depends_on:
+      - db
+    command: db:5432
+
+  db-migrate:
+    image: gomicro/goose
+    command: goose -dir "/migrations" postgres "host=animus user=animus dbname=animus password=animus sslmode=disable port=5432 host=db" up
+    depends_on:
+      - db
+    restart: on-failure
+    volumes:
+      - ./db/migrations:/migrations
 
   ipfs:
     image: ipfs/go-ipfs:latest
@@ -31,7 +49,31 @@ services:
       # If you want to override these or add more ports, see https://docs.docker.com/compose/extends/ .
       
       # API port, which includes admin operations, so you probably don't want this remotely accessible.
-      - 127.0.0.1:5001:5001
+      - 5001:5001
       
       # HTTP Gateway
-      - 127.0.0.1:8080:8080
+      - 8080:8080
+
+  ipfs-webui:
+    image: ipfs/ipfs-webui:latest
+    environment:
+      - IPFS_PROFILE=local-discovery
+      - IPFS_PATH=/ipfsdata
+    volumes:
+      # ipfs node is private
+      # ./data/ipfs/config::Bootstrap list is empty (no bootstrap)
+      # swarm key is provided in the devenv
+      - ./devenv/ipfs:/ipfsdata
+    ports:
+      # Swarm listens on all interfaces, so is remotely reachable.
+      - 4001:4001/tcp
+      - 4001:4001/udp
+      
+      # The following ports only listen on the loopback interface, so are not remotely reachable by default.
+      # If you want to override these or add more ports, see https://docs.docker.com/compose/extends/ .
+      
+      # API port, which includes admin operations, so you probably don't want this remotely accessible.
+      - 5001:5001
+      
+      # HTTP Gateway
+      - 8080:8080
