--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - 5432:5432
     volumes: 
-      - ./db:/var/lib/postgresql/data
+      - ./db/data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
   wait-for-db:
     image: dadarek/wait-for-dependencies
