--- a/web/animus-ui/package.json
+++ b/web/animus-ui/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
+    "@tailwindui/react": "^0.1.1",
     "next": "12.1.5",
     "react": "18.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.0.0"
   },
   "devDependencies": {
