--- a/web/animus-ui/package.json
+++ b/web/animus-ui/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.5",
     "react": "18.0.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-dropzone": "^13.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
