--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -54,3 +54,40 @@ services:
       
       # HTTP Gateway
       - 8080:8080
+
+  nsqlookupd:
+    image: nsqio/nsq
+    command: /nsqlookupd
+    ports:
+      - 4160:4160
+      - 4161:4161
+  nsqd:
+    image: nsqio/nsq
+    command: /nsqd --lookupd-tcp-address=nsqlookupd:4160
+    depends_on:
+      - nsqlookupd
+    ports:
+      - 4150:4150
+      - 4151:4151
+  nsqadmin:
+    image: nsqio/nsq
+    command: /nsqadmin --lookupd-http-address=nsqlookupd:4161
+    depends_on:
+      - nsqlookupd  
+    ports:
+      - 4171:4171
+
+  minio:
+    image: quay.io/minio/minio:RELEASE.2022-04-29T01-27-09Z
+    command: server --console-address ":9001" /data  
+    hostname: minio1
+    volumes:
+      - ./devenv/minio/data:/data
+    ports:
+      - 9000:9000
+      - 9001:9001
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
