--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# go binaries don't have any extensions on NIX systems
+*
+!*/
+!*.*
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,7 +18,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # IPFS local compose files
 devenv/ipfs/blocks
