refactor animus-ui; connect to api; add next-auth

--- a/web/animus-ui/package.json
+++ b/web/animus-ui/package.json
@@ -12,7 +12,9 @@
     "@heroicons/react": "^1.0.6",
     "@tailwindui/react": "^0.1.1",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "next": "12.1.5",
+    "next-auth": "^4.9.0",
     "react": "18.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.0.0",
