--- a/cmd/userd/userd.local.yaml
+++ b/cmd/userd/userd.local.yaml
@@ -17,6 +17,7 @@ storage:
     endpoint: "localhost:9000"
     access_key_id: "AYEKOSQDTJR0E12W2BRS"
     access_key_secret: "H+gdD9eaBYuBEbtyRTblmVdQSAXVBLjim83r9I+H"
-nsq_topic: "pin-requests"
+nsq_pinner_topic: "pin-requests"
+nsq_email_register_topic: "email-register"
 nsqd_url: "localhost:4150"
 gin_mode: ""
