deploy: dockerize mailer with dry-run params

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -135,3 +135,15 @@ services:
       - nsqd
       - minio
 
+  mailerd:
+    container_name: mailerd
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: deploy/mailerd/mailerd.Dockerfile
+      target: production
+    depends_on:
+      - nsqlookupd
+      - nsqd
+      - minio
+
