deploy: fix local docker deploy networking

--- a/deploy/mailerd/mailerd.yaml
+++ b/deploy/mailerd/mailerd.yaml
@@ -1,7 +1,7 @@
 api_key: "test-key"
 api_secret: "test-secret-oooh"
 topic: "mailer"
-nsq_lookup: "localhost:4161"
+nsq_lookup: "nsqlookupd:4161"
 sender: "matija@animus.store"
 sender_name: "Matija from Animus"
 dry_run: true
