--- a/deploy/clientd/clientd.yaml
+++ b/deploy/clientd/clientd.yaml
@@ -7,9 +7,9 @@ bucket: "animus"
 storage:
     lifetime: 2
     region: "eu-central-1"
-    endpoint: "localhost:9000"
+    endpoint: "minio:9000"
     access_key_id: "AYEKOSQDTJR0E12W2BRS"
     access_key_secret: "H+gdD9eaBYuBEbtyRTblmVdQSAXVBLjim83r9I+H"
 nsq_pinner_topic: "pin-requests"
-nsqd_url: "localhost:4150"
+nsqd_url: "nsqd:4150"
 gin_mode: ""
