--- a/deploy/userd/userd.yaml
+++ b/deploy/userd/userd.yaml
@@ -14,11 +14,11 @@ bucket: "animus"
 storage:
     lifetime: 2
     region: "eu-central-1"
-    endpoint: "localhost:9000"
+    endpoint: "minio:9000"
     access_key_id: "AYEKOSQDTJR0E12W2BRS"
     access_key_secret: "H+gdD9eaBYuBEbtyRTblmVdQSAXVBLjim83r9I+H"
 nsq_pinner_topic: "pin-requests"
 nsq_mailer_topic: "mailer"
 activate_user_web_url: "http://localhost:3000/api/activate/user"
-nsqd_url: "localhost:4150"
+nsqd_url: "nsqd:4150"
 gin_mode: ""
