docker: update deps for userd

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -101,9 +101,9 @@ services:
       target: production
     depends_on:
       - db
-      # - nsqlookupd
-      # - nsqd
-      # - minio
+      - nsqlookupd
+      - nsqd
+      - minio
     ports:
       - "8083:8083"
 
