--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -53,7 +53,8 @@ services:
       - 5001:5001
       
       # HTTP Gateway
-      - 8080:8080
+      # HOST:container
+      - 8085:8080
 
   nsqlookupd:
     image: nsqio/nsq
