--- a/web/animus-ui/.env
+++ b/web/animus-ui/.env
@@ -1,6 +1,6 @@
-NEXT_API_URL=http://65.108.197.98:8083
+NEXT_API_URL=http://localhost:8083
 NEXT_JWT_SECRET=muchsecrets-in-development
-NEXT_IPFS_DEFAULT_GATEWAY=http://localhost:8080/ipfs
+NEXT_IPFS_DEFAULT_GATEWAY=http://localhost:8085
 NEXTAUTH_SECRET=justanotherverysecretvalue-very-dev-friendly
 NEXTAUTH_URL=http://localhost:3000
 NEXT_NODE_ENV=development
