--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 version: '3.5'
+
+volumes:
+  db-data:
+    driver: local
+    external: false
+
 services:
   db:
     image: postgres:14-alpine
@@ -9,11 +15,11 @@ services:
       - POSTGRES_PASSWORD=animus
       - POSTGRES_DB=animus
       - POSTGRES_HOST_AUTH_METHOD=trust
-      - PGDATA=/var/lib/postgresql-static/data
+      - PGDATA=/var/lib/postgresql/data
     # ports:
     #   - 5432:5432
     volumes: 
-      - ./db/data:/var/lib/postgresql/data
+      - ./db-data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
   wait-for-db:
