--- a/web/animus-ui/package.json
+++ b/web/animus-ui/package.json
@@ -18,7 +18,8 @@
     "react": "18.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.0.0",
-    "react-dropzone": "^13.0.0"
+    "react-dropzone": "^13.0.0",
+    "react-hook-form": "^7.33.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
