--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,15 +1,4 @@
 version: '3.5'
-
-# NOTE
-# you may need to create a named volume if you want to use an external container
-# run the following command from project root (animus/)
-# docker volume create --driver local --opt type=none --opt device=${PWD}/devenv/db/data --opt o=bind localdb
-# ------------------------------------------------------------------------------------------------------#
-volumes:
-  db-data:
-    driver: local
-    external: false
-
 services:
   db:
     container_name: db
@@ -25,7 +14,7 @@ services:
     ports:
       - 5432:5432
     volumes: 
-      - .db-data:/var/lib/postgresql/data
+      - ./devenv/db/data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
   wait-for-db:
