--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,8 @@ services:
       - POSTGRES_DB=animus
       - POSTGRES_HOST_AUTH_METHOD=trust
       - PGDATA=/var/lib/postgresql/data
-    # ports:
-    #   - 5432:5432
     volumes: 
-      - ./db-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/data
       - ./db/init.sql:/docker-entrypoint-initdb.d/create_tables.sql
 
   wait-for-db:
