--- a/cmd/pinnerd/pinnerd.local.yaml
+++ b/cmd/pinnerd/pinnerd.local.yaml
@@ -1,7 +1,7 @@
 node_api_url: "localhost:5001"
 local_shell: false
-db_dsn: "host=localhost user=animus password=animus dbname=animus port=5436 sslmode=disable"
-db_uri: "postgres://animus:animus@localhost:5436/animus"
+db_dsn: "host=localhost user=animus password=animus dbname=animus port=5432 sslmode=disable"
+db_uri: "postgres://animus:animus@localhost:5432/animus"
 debug: true
 text_logs: true
 storage:
@@ -12,6 +12,8 @@ storage:
     access_key_secret: "H+gdD9eaBYuBEbtyRTblmVdQSAXVBLjim83r9I+H"
 bucket: "animus"
 nsq_lookupd_url: "localhost:4161"
-publish_topic: []
+nsqd_url: "localhost:4150"
+publish_topic: "webhooks"
 subscribe_topic: "pin-requests"
 max_concurrent_requests: 10
+retry_url: "http://localhost:8083"
