--- a/cmd/clientd/clientd.local.yaml
+++ b/cmd/clientd/clientd.local.yaml
@@ -1,4 +1,5 @@
 http_port: "localhost:8084"
+node_api_url: "localhost:5001"
 db_dsn: "host=localhost user=animus password=animus dbname=animus port=5432 sslmode=disable"
 db_uri: "postgres://animus:animus@localhost:5432/animus"
 debug: true
